<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="surface">Surface</string>
    <string name="number_of_rooms">Rooms</string>
    <string name="number_of_bathrooms">Bathrooms</string>
    <string name="number_of_bedrooms">Bedrooms</string>
    <string name="location">Location</string>
    <string name="geolocalize">Geolocalize</string>
    <string name="street_number_and_street_name">Street</string>
    <string name="address_complements">Address complements</string>
    <string name="zip_code">Zip code</string>
    <string name="country">Country</string>
    <string name="status">Status</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="reset">Reset</string>
    <string name="search">Search</string>
    <string name="search_by_type">Search by type</string>
    <string name="max_price">Max price</string>
    <string name="home">Home</string>
    <string name="type">Type</string>
    <string name="price">Price</string>
    <string name="required">Required</string>
    <string name="camera">Camera</string>
    <string name="select">Select</string>
    <string name="incorrect_estate_type">Incorrect estate type</string>
    <string name="nan">Not a number</string>
    <string name="save">Save</string>
    <string name="skip">Skip</string>

    <string name="media">Media</string>
    <string name="description">Description</string>

    <string name="map">Map</string>
    <string name="settings">Settings</string>
    <string name="user">User</string>
    <string name="user_name">User name</string>
    <string name="devise">Devise</string>
    <string name="dollar">$</string>
    <string name="euro">€</string>
    <string name="sell">Sell</string>

    <!-- Notification -->
    <string name="notification_channel_description">Channel to notify when estate has been added with success</string>
    <string name="notification_content">Saved estate with id</string>

    <!-- Preferences -->
    <string name="user_name_preference_key">user_name_preference</string>
    <string name="devise_preference_key">devise_preference</string>

</resources>
