<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_add"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/add"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/menu_item_edit"
        android:icon="@drawable/ic_baseline_edit_24"
        android:title="@string/edit"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/menu_item_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_item_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_item_map"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/map"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_item_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings"
        app:showAsAction="never"/>

</menu>