<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/icon_location"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_marginBottom="11dp"
        android:src="@drawable/ic_baseline_location_on_24"
        app:layout_constraintEnd_toStartOf="@+id/location_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/location_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding"
        android:text="@string/location"
        style="@style/label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/icon_location"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/location_number_street"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/street_number_and_street_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/location_title"
        app:layout_constraintTop_toBottomOf="@+id/location_title" />

    <TextView
        android:id="@+id/address_complements"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/address_complements"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/location_title"
        app:layout_constraintTop_toBottomOf="@+id/location_number_street" />

    <TextView
        android:id="@+id/location_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/location_title"
        app:layout_constraintTop_toBottomOf="@+id/address_complements" />

    <TextView
        android:id="@+id/location_zip_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/zip_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/location_title"
        app:layout_constraintTop_toBottomOf="@+id/location_city" />

    <TextView
        android:id="@+id/country"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/country"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/location_title"
        app:layout_constraintTop_toBottomOf="@+id/location_zip_code" />

</androidx.constraintlayout.widget.ConstraintLayout>