<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/label_estate_type"
        android:layout_width="@dimen/label_min_width"
        android:layout_height="wrap_content"
        android:text="@string/type"
        style="@style/label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <AutoCompleteTextView
        android:id="@+id/auto_complete_estate_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/label_estate_type"
        app:layout_constraintTop_toTopOf="@+id/label_estate_type" />

    <Space
        android:id="@+id/space_1"
        android:layout_width="@dimen/big_space"
        android:layout_height="@dimen/big_space"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auto_complete_estate_type"/>

    <TextView
        android:id="@+id/label_estate_location"
        android:layout_width="@dimen/label_min_width"
        android:layout_height="wrap_content"
        android:text="@string/location"
        style="@style/label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/space_1" />

    <AutoCompleteTextView
        android:id="@+id/auto_complete_estate_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/label_estate_location"
        app:layout_constraintStart_toEndOf="@id/label_estate_location"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Space
        android:id="@+id/space_2"
        android:layout_width="@dimen/big_space"
        android:layout_height="@dimen/big_space"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auto_complete_estate_location" />

    <Button
        android:id="@+id/button_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/space_2"/>

</androidx.constraintlayout.widget.ConstraintLayout>