<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/label_streetNumber_and_streetName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/street_number_and_street_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/label"/>

    <EditText
        android:id="@+id/editText_streetNumber_and_streetName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_streetNumber_and_streetName" />

    <TextView
        android:id="@+id/label_address_complements"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/address_complements"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_streetNumber_and_streetName"
        style="@style/label"/>

    <EditText
        android:id="@+id/editText_addressComplements"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_address_complements" />

    <TextView
        android:id="@+id/label_zipCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/zip_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_addressComplements"
        style="@style/label"/>

    <EditText
        android:id="@+id/editText_zipCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_zipCode" />

    <TextView
        android:id="@+id/label_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/country"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_zipCode"
        style="@style/label"/>

    <EditText
        android:id="@+id/editText_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_country" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_country"
        android:orientation="horizontal"
        android:weightSum="2">
        <Button
            android:id="@+id/button_skip_form_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/ButtonSkip" />
        <Button
            android:id="@+id/button_save_form_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/ButtonSave" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>